# m17-fme

./: .gitignore  .gitmodules  Audio_Plumbing.md  CMakeLists.txt  Example_Usage.md  Install_Notes.md  README.md  Usage.md  download-and-install-arch.sh  download-and-install-deb.sh  download-and-install-rhel.sh  install.sh  rebuild.sh  virtualsink.sh
cmake/: FindCODEC2.cmake
docs/: Audio_Plumbing.md  Example_Usage.md  Install_Notes.md
include/: banner.h  colors.h  fsync.h  m17.h  main.h
key/: sig_pri_key.txt  sig_pub_key.txt
samples/: m17_clear_voice_float.sym  m17_sms_pkt_data_float_symbol_output.sym
scripts/: cyg_portable.sh  cyg_rebuild.sh  download-and-install-arch.sh  download-and-install-cygwin.sh  download-and-install-deb.sh  download-and-install-macos.sh  download-and-install-rhel.sh  download-and-install-ubuntu2404lts.sh  install.sh  rebuild.sh  start-m17-fme-linux-terminal.sh
scripts/cygwin_bat/: complete_usage_options.txt  example_options.txt  readme_cygwin_bat.txt  start-m17-fme.bat
src/: aes.c  audio.c  convolution.c  crc16.c  encryption.c  filter.c  framesync.c  fsync.c  golay.c  init.c  init_super.c  io.c  m17_brt_demodulator.c  m17_c2_decoder.c  m17_csd_decoder.c  m17_ipf_decoder.c  m17_lich_decoder.c  m17_lsf_decoder.c  m17_lsf_demodulator.c  m17_ota_key_delivery.c  m17_pkt_decoder.c  m17_pkt_demodulator.c  m17_pkt_encoder.c  m17_pyl_decoder.c  m17_rf_encoder.c  m17_str_demodulator.c  m17_str_encoder.c  m17_tst_pattern_generator.c  main.c  ncurses_input_handler.c  ncurses_terminal_handler.c  net.c  net_rig.c  net_tcp.c  net_udp.c  oss.c  pulse.c  test.cpp  time.c  utils.c  (+2 more)
src/decoder/: m17_brt_demodulator.c  m17_csd_decoder.c  m17_ipf_decoder.c  m17_lich_decoder.c  m17_lsf_decoder.c  m17_lsf_demodulator.c  m17_pkt_decoder.c  m17_pkt_demodulator.c  m17_pyl_decoder.c  m17_str_demodulator.c
src/duplex/: m17_duplex.c
src/encoder/: m17_brt_encoder.c  m17_csd_encoder.c  m17_duplex_mode.c  m17_ecdsa_encoder.c  m17_ota_key_delivery.c  m17_pkt_encoder.c  m17_rxtx_mode.c  m17_str_encoder.c
src/encryption/: aes.c  ecdsa.c  encryption.c
src/fec/: convolution.c  slice.c  viterbi.c
src/io/: audio.c  io.c  oss.c  pulse.c  pulse_devices.c  wav.c
src/modem/: filter.c  framesync.c  m17_rf_encoder.c  rfa_modulator.c  test_pattern_generator.c
src/ncurses/: ncurses_input_handler.c  ncurses_terminal_handler.c
src/net/: net_rig.c  net_udp.c
src/utils/: time.c  utils.c
